fix nav1 spacing

--- a/docs/css/navbar.css
+++ b/docs/css/navbar.css
@@ -27,7 +27,7 @@
 
 .logo1 {
     display:flex;
-    width:200px;
+    width:160px;
     flex-direction: row;
     justify-content: right;
     align-items: center;
@@ -54,7 +54,7 @@
     position:relative;
     width:100%;
     flex-direction: row;
-    justify-content:right;
+    justify-content:space-evenly;
     align-items: center;
     right:0px;
     padding-top:15px;
